function(add_mongo_test target_name source_file)
    add_executable(${target_name} ${source_file})
    target_link_libraries(${target_name} PRIVATE ${PROJECT_NAME})
    target_include_directories(${target_name} PRIVATE ${CMAKE_SOURCE_DIR})
    galay_mongo_apply_cxx(${target_name})
endfunction()

add_mongo_test(T1-BsonProtocol T1-bson_protocol.cc)
add_mongo_test(T2-SyncMongoClient T2-sync_mongo_client.cc)
add_mongo_test(T3-AsyncMongoPipeline T3-async_mongo_pipeline.cc)
add_mongo_test(T4-SyncMongoFunctional T4-sync_mongo_functional.cc)
add_mongo_test(T5-AsyncMongoFunctional T5-async_mongo_functional.cc)
add_mongo_test(T6-AuthCompatibility T6-auth_compatibility.cc)
add_mongo_test(T7-SyncLargeMessageBridge T7-sync_large_message_bridge.cc)
add_mongo_test(T8-ProtocolBuilder T8-protocol_builder.cc)
